WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
60933
Global object initialization is expensive
https://bugs.webkit.org/show_bug.cgi?id=60933
Summary
Global object initialization is expensive
Geoffrey Garen
Reported
2011-05-16 16:34:47 PDT
Global object initialization is expensive
Attachments
Patch
(84.50 KB, patch)
2011-05-16 16:44 PDT
,
Geoffrey Garen
no flags
Details
Formatted Diff
Diff
Patch
(95.79 KB, patch)
2011-05-16 20:01 PDT
,
Geoffrey Garen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2011-05-16 16:44:07 PDT
Created
attachment 93713
[details]
Patch
WebKit Review Bot
Comment 2
2011-05-16 16:46:55 PDT
Attachment 93713
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/JavaScriptCore/ChangeLog', u'Source..." exit_code: 1 Source/JavaScriptCore/runtime/BooleanPrototype.cpp:37: Alphabetical sorting problem. [build/include_order] [4] Source/JavaScriptCore/runtime/ArrayConstructor.cpp:40: Alphabetical sorting problem. [build/include_order] [4] Source/JavaScriptCore/runtime/StringConstructor.cpp:36: Alphabetical sorting problem. [build/include_order] [4] Source/JavaScriptCore/runtime/RegExpPrototype.cpp:48: Alphabetical sorting problem. [build/include_order] [4] Source/JavaScriptCore/runtime/NumberPrototype.cpp:46: Alphabetical sorting problem. [build/include_order] [4] Source/JavaScriptCore/runtime/ErrorPrototype.cpp:39: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 6 in 29 files If any of these errors are false positives, please file a bug against check-webkit-style.
Early Warning System Bot
Comment 3
2011-05-16 17:07:17 PDT
Comment on
attachment 93713
[details]
Patch
Attachment 93713
[details]
did not pass qt-ews (qt): Output:
http://queues.webkit.org/results/8704145
Collabora GTK+ EWS bot
Comment 4
2011-05-16 19:49:30 PDT
Comment on
attachment 93713
[details]
Patch
Attachment 93713
[details]
did not pass gtk-ews (gtk): Output:
http://queues.webkit.org/results/8708075
Geoffrey Garen
Comment 5
2011-05-16 20:01:12 PDT
Created
attachment 93733
[details]
Patch
Geoffrey Garen
Comment 6
2011-05-16 20:01:28 PDT
New patch for the EWS bots to chew on.
WebKit Review Bot
Comment 7
2011-05-16 20:03:21 PDT
Attachment 93733
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/JavaScriptCore/ChangeLog', u'Source..." exit_code: 1 Source/JavaScriptCore/runtime/BooleanPrototype.cpp:37: Alphabetical sorting problem. [build/include_order] [4] Source/JavaScriptCore/runtime/ArrayConstructor.cpp:40: Alphabetical sorting problem. [build/include_order] [4] Source/JavaScriptCore/runtime/StringConstructor.cpp:36: Alphabetical sorting problem. [build/include_order] [4] Source/JavaScriptCore/runtime/RegExpPrototype.cpp:48: Alphabetical sorting problem. [build/include_order] [4] Source/JavaScriptCore/runtime/NumberPrototype.cpp:46: Alphabetical sorting problem. [build/include_order] [4] Source/JavaScriptCore/runtime/ErrorPrototype.cpp:39: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 6 in 34 files If any of these errors are false positives, please file a bug against check-webkit-style.
Geoffrey Garen
Comment 8
2011-05-16 20:04:17 PDT
Comment on
attachment 93733
[details]
Patch Marking r+ to get this out of the review queue.
Geoffrey Garen
Comment 9
2011-05-16 21:08:26 PDT
Committed
r86653
: <
http://trac.webkit.org/changeset/86653
>
Yuta Kitamura
Comment 10
2011-05-16 22:02:53 PDT
Your change caused a lot of regressions on Windows bots:
http://build.webkit.org/builders/Windows%20XP%20Debug%20%28Tests%29/builds/28715
http://build.webkit.org/builders/Windows%207%20Release%20%28Tests%29/builds/12917
(And your change seems to be reviewed by yourself, which I don't know is the right thing to do.)
Yuta Kitamura
Comment 11
2011-05-16 22:59:27 PDT
Other bots are also failing (EFL compile, Leopard/Snow Leopard tests), so I'm going to roll out this change.
Alexey Proskuryakov
Comment 12
2011-05-16 23:21:32 PDT
Are we talking about a few nanoseconds per engine instance (ignoring worker threads for a moment), or about something significant?
Yuta Kitamura
Comment 13
2011-05-16 23:25:51 PDT
Rollout patch has landed. I appreciate your understanding about keeping our bots green. Error details: Windows
http://build.webkit.org/builders/Windows%20XP%20Debug%20%28Tests%29/builds/28715
(Layout test crashes, jscore-test 962 failures) Leopard, SnowLeopard
http://build.webkit.org/builders/SnowLeopard%20Intel%20Release%20%28Tests%29/builds/29391
(Sputnik failures) EFL
http://build.webkit.org/builders/EFL%20Linux%20Release%20%28Build%29/builds/14457
(Compile error)
Geoffrey Garen
Comment 14
2011-05-17 19:40:10 PDT
Committed
r86727
: <
http://trac.webkit.org/changeset/86727
>
Geoffrey Garen
Comment 15
2011-05-17 20:26:05 PDT
Looks like the EFL builder is broken. I filed
https://bugs.webkit.org/show_bug.cgi?id=61018
to track that.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug